# ATS-Resume-Maker

./: .env.example  .gitignore  Commands.txt  pyproject.toml
backend/: auth_store.py  logging_utils.py  main.py  models.py
backend/agents/: ats_scorer.py  jd_analyzer.py  latex_compiler_agent.py  pipeline.py  resume_optimizer.py  review.py  score_roadmap.py
backend/latex/: compiler.py  editor.py  parser.py
backend/llm/: base.py  claude_provider.py  cli_base.py  codex_provider.py  copilot_provider.py  factory.py  mock_provider.py  ollama_provider.py  openai_provider.py  registry.py
backend/pdf/: generator.py  parser.py
backend/rag/: ingest.py  retriever.py  store.py
backend/tests/: test_dynamic_skill_injection.py  test_jd_analyzer_hybrid.py
data/: app.db  experience.json  sample_resume.tex
data/users/1/: resume_template.tex
frontend/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: AuthScreen.jsx  DiffView.jsx  HistoryPanel.jsx  JDInput.jsx  LoadingOverlay.jsx  ScoreDashboard.jsx
